--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,7 @@
 <!--index.wxml-->
+<view>
+<daohang></daohang>
+</view>
 <view class="container">
   <view class="userinfo">
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
